Fix bug where resource PDF content overlapped footer

--- a/csunplugged/static/scss/print-resource-pdf.scss
+++ b/csunplugged/static/scss/print-resource-pdf.scss
@@ -10,10 +10,10 @@
 
 // General
 @page {
-  margin: 10mm 10mm;
+  margin: 10mm 10mm 20mm 10mm;
 }
 footer {
-  bottom: 0;
+  bottom: -13mm;
 }
 header {
   text-align: center;
